--- a/Develop/package.json
+++ b/Develop/package.json
@@ -1,16 +1,26 @@
 {
-  "name": "static-site",
+  "name": "good-readme-generator",
   "version": "1.0.0",
-  "description": "",
+  "description": "A command-line application that dynamically generates a README.md from a user's input.",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/amboffman/good-readme-generator.git"
+  },
+  "author": "Anthony Boffman",
   "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/amboffman/good-readme-generator/issues"
+  },
+  "homepage": "https://github.com/amboffman/good-readme-generator#readme",
   "dependencies": {
-    "axios": "^0.19.0",
-    "dotenv": "^8.0.0",
-    "inquirer": "^6.3.1"
-  }
+    "@octokit/rest": "^17.1.4",
+    "axios": "^0.19.2",
+    "inquirer": "^7.1.0"
+  },
+  "devDependencies": {},
+  "keywords": []
 }
